# funlib

./: .gitignore  README.md
LinearAlgebra/: linal.cpp  linal.hpp
ParticleSys/: ParticleSystem.hpp
Set/: set.cpp  set.hpp  set_operations.cpp  set_operations.hpp
include/: funlib.hpp
include/funlib/ParticleSys/: ParticleSystem.hpp
include/funlib/sycl/: sycl_handler.hpp
install/include/funlib/sycl/: sycl_handler.hpp
main/: CMakeLists.txt  main.cpp  main_particles.cpp
source/: linal.cpp  sycl_handler.cpp  tensor.cpp  tensor_operations.cpp
sycl/: sycl_handler.cpp  sycl_handler.hpp
